<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            android:id="@+id/imgView"
            android:src="@drawable/login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_Veri"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@color/colortextfirst"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Otp_ver_txt"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colortextsecond"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile_number"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colortextsecond"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/background_box"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/mobile_number"
                android:background="@null"
                android:hint="7745997185"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colortextfirst"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOTP"
                android:textColor="@color/colortextfirst"
                android:text="Get OTP"
                android:layout_margin="30dp"
                android:textStyle="bold"
                android:background="@drawable/background_button"/>

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/getotppb"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>




    </LinearLayout>

</ScrollView>