<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6D6"
    tools:context=".VerifyenterOTP2"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            android:id="@+id/imgView"
            android:src="@drawable/login"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_Veri"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@color/colortextfirst"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_otp_sent_to_you"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colortextsecond"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colortextsecond"
            android:id="@+id/txtmobileshownumber"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp1"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp2"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp3"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp4"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp5"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:id="@+id/inputotp6"
                android:background="@drawable/background_box"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                tools:ignore="LabelFor" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colortextsecond"
                android:text="Didn't recieved the otp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colortextsecond"
                android:text="Resend the OTP"
                android:textStyle="bold"
                android:id="@+id/textresendotp"
                android:layout_marginStart="8dp"/>



        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOTP"
            android:textColor="@color/colortextfirst"
            android:text="Verify OTP"
            android:layout_margin="30dp"
            android:textStyle="bold"
            android:background="@drawable/background_button"/>

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/verifyotppb"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>


    </LinearLayout>



</ScrollView>